Se separaron las clases iniciales en archivos .java separados.

--- a/PlantillaAPK/app/src/main/res/layout/activity_main.xml
+++ b/PlantillaAPK/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="#000000"
+            android:background="#3F51B5"
             android:textColor="#fff"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"/>
