--- a/PlantillaAPK/app/src/main/res/layout/activity_pantalla_presentacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout/activity_pantalla_presentacion.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/logo"
             android:layout_marginTop="135dp"
-            android:id="@+id/imageView2"
+            android:id="@+id/presentacionLogo"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -25,7 +25,7 @@
             android:layout_below="@+id/imageView2"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="42dp"
-            android:id="@+id/textView"
+            android:id="@+id/textoNombre"
             android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
             android:textSize="30sp"
             android:textStyle="normal|bold" />
@@ -37,7 +37,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="43dp"
-            android:id="@+id/textView2" />
+            android:id="@+id/textoVersion" />
 
         <TextView
             android:text="@string/NumVersion"
@@ -46,6 +46,6 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="13dp"
-            android:id="@+id/textView3" />
+            android:id="@+id/textoNumVersion" />
 
 </RelativeLayout>
