--- a/PlantillaAPK/app/src/main/res/layout/fragment_pantalla_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout/fragment_pantalla_reproductor.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageButton android:id="@+id/pause"
-        android:layout_height="50dp"
-        android:layout_width="50dp"
+        android:layout_height="@dimen/BotonPausaLargo"
+        android:layout_width="@dimen/BotonPausaAncho"
         android:src="@drawable/ic_reproductor_pause"
         android:layout_alignTop="@+id/stop"
         android:layout_toLeftOf="@+id/play"
         android:layout_toStartOf="@+id/play"
-        android:layout_marginRight="18dp"
-        android:layout_marginEnd="18dp"
-        android:contentDescription="" />
+        android:layout_marginRight="@dimen/BotonPausaMargenDerecho"
+        android:layout_marginEnd="@dimen/BotonPausaMargenAbajo"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:id="@+id/image_reproductor"
@@ -21,47 +23,49 @@
         android:adjustViewBounds="false"
         android:cropToPadding="false"
         android:background="@drawable/fondo4"
-        android:layout_width="250dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="37dp"
+        android:layout_width="@dimen/ImagenReproductorAncho"
+        android:layout_height="@dimen/ImagenReproductorlargo"
+        android:layout_marginTop="@dimen/ImagenReproductorMargenArriba"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <SeekBar
         android:id="@+id/seekBar1"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:max="10"
+        android:layout_width="@dimen/SeekBarLargo"
         android:layout_below="@+id/image_reproductor"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp" />
+        android:layout_marginTop="@dimen/SeekBarMargenArriba"
+        android:layout_height="@dimen/SeekBarAncho" />
 
     <ImageButton android:id="@+id/stop"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/BotonDetenerAncho"
         android:src="@drawable/ic_reproductor_stop"
-        android:layout_width="50dp"
+        android:layout_width="@dimen/BotonDetenerLargo"
         android:layout_below="@+id/seekBar1"
         android:layout_alignRight="@+id/image_reproductor"
         android:layout_alignEnd="@+id/image_reproductor"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="46dp" />
+        android:layout_marginRight="@dimen/BotonDetenerMargenDerecho"
+        android:layout_marginEnd="@dimen/BotonDetenerMargenAbajo"
+        android:layout_marginTop="@dimen/BotonDetenerMargenArriba"
+        tools:ignore="ContentDescription" />
 
     <ImageButton android:id="@+id/play"
         android:src="@drawable/ic_reproductor_play"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/BotonReproducirLargo"
+        android:layout_height="@dimen/BotonReproducirAncho"
         android:layout_below="@+id/seekBar1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp" />
+        android:layout_marginTop="@dimen/BotonReproducirMargenArriba"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:text="@string/solicitud"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="78dp"
         android:textColorLink="@color/colorPrimary"
         android:id="@+id/textoSolicitud"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:textSize="@dimen/LinkReproductorTamañoLetra"
+        android:layout_below="@+id/play"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp" />
 </RelativeLayout>
