--- a/PlantillaAPK/app/src/main/res/layout-large/prueba_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout-large/prueba_reproductor.xml
@@ -1,76 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fondoreproductor">
 
+    <LinearLayout
+        android:layout_width="20dp"
+        android:layout_height="match_parent">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="20dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+    </LinearLayout>
 
     <RelativeLayout
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_width="100dp"
-        android:layout_height="350dp">
-
-        <ImageView
-            android:id="@+id/image_reproductor"
-            android:contentDescription="@string/DescripcionImgReproductor"
-            android:background="@drawable/fondo4"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:adjustViewBounds="true"
-            android:cropToPadding="true"
-            android:layout_centerVertical="true"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginBottom="160dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <ImageButton android:id="@+id/play"
-            android:src="@mipmap/ic_reproductor_play"
-            android:layout_width="@dimen/BotonReproducirAncho"
-            android:layout_height="@dimen/BotonReproducirLargo"
-            tools:ignore="ContentDescription"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="118dp" />
-
-        <ImageButton android:id="@+id/stop"
-            android:layout_height="@dimen/BotonDetenerAncho"
-            android:src="@mipmap/ic_reproductor_stop"
-            android:layout_width="@dimen/BotonDetenerLargo"
-            tools:ignore="ContentDescription"
-            android:layout_marginLeft="72dp"
-            android:layout_marginStart="72dp"
-            android:layout_alignBottom="@+id/play"
-            android:layout_toRightOf="@+id/play"
-            android:layout_toEndOf="@+id/play" />
-
-        <ImageButton android:id="@+id/pause"
-            android:layout_height="@dimen/BotonPausaLargo"
-            android:src="@mipmap/ic_reproductor_pause"
-            android:contentDescription=""
-            tools:ignore="ContentDescription"
-            android:layout_width="@dimen/BotonPausaAncho"
-            android:layout_marginRight="60dp"
-            android:layout_marginEnd="60dp"
-            android:layout_alignBottom="@+id/play"
-            android:layout_toLeftOf="@+id/play"
-            android:layout_toStartOf="@+id/play" />
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
+        android:background="@drawable/disco"
+        android:layout_height="400dp"
+        android:layout_width="550dp">
 
     </RelativeLayout>
 
@@ -81,35 +46,88 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_height="200dp">
+        android:layout_height="150dp">
 
 
-        <TextView
-            android:text="@string/solicitud"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColorLink="@color/colorPrimary"
-            android:id="@+id/textoSolicitud"
-            android:textSize="@dimen/LinkReproductorTamañoLetra"
-            android:layout_weight="1"
-            android:layout_marginBottom="81dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
-    <RelativeLayout android:layout_height="100dp"
-        android:layout_width="400dp"
-        android:layout_centerVertical="true"
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_marginBottom="94dp"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
+        <ImageButton android:id="@+id/stop"
+            android:src="@drawable/ic_reproductor_stop"
+            tools:ignore="ContentDescription"
+            android:background="@drawable/boton_redondo"
+            android:layout_alignBottom="@+id/play"
+            android:layout_toRightOf="@+id/play"
+            android:layout_toEndOf="@+id/play"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
+
+        <ImageButton android:id="@+id/pause"
+            android:src="@drawable/ic_reproductor_pause"
+            android:contentDescription=""
+            tools:ignore="ContentDescription"
+            android:background="@drawable/boton_redondo"
+            android:layout_marginRight="22dp"
+            android:layout_marginEnd="22dp"
+            android:layout_alignTop="@+id/stop"
+            android:layout_toLeftOf="@+id/play"
+            android:layout_toStartOf="@+id/play"
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
+
+        <ImageButton android:id="@+id/play"
+            android:src="@drawable/ic_reproductor_play"
+            tools:ignore="ContentDescription"
+            android:background="@drawable/boton_redondo"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:text="@string/solicitud"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColorLink="#ffffff"
+            android:id="@+id/textoSolicitud"
+            android:textSize="@dimen/LinkReproductorTamañoLetra"
+            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="19dp" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_height="100dp"
+        android:layout_marginTop="430dp"
+        android:layout_width="575dp">
+
         <SeekBar
             android:id="@+id/seekBar1"
-            android:layout_centerHorizontal="true"
             android:layout_height="25dp"
             android:max="10"
-            android:layout_width="match_parent" />
+            android:background="#d7d7d7"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_width="600dp" />
+
     </RelativeLayout>
+
 </RelativeLayout>
