--- a/PlantillaAPK/app/src/main/res/layout-normal/prueba_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/prueba_reproductor.xml
@@ -3,52 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageButton android:id="@+id/pause"
-        android:layout_height="@dimen/BotonPausaLargo"
-        android:layout_width="@dimen/BotonPausaAncho"
-        android:src="@mipmap/ic_reproductor_pause"
-        android:layout_alignTop="@+id/stop"
-        android:layout_toLeftOf="@+id/play"
-        android:layout_toStartOf="@+id/play"
-        android:layout_marginRight="@dimen/BotonPausaMargenDerecho"
-        android:layout_marginEnd="@dimen/BotonPausaMargenAbajo"
-        android:contentDescription=""
-        tools:ignore="ContentDescription" />
+    android:layout_height="match_parent"
+    android:background="@drawable/fondoreproductor">
 
     <ImageView
         android:id="@+id/image_reproductor"
         android:contentDescription="@string/DescripcionImgReproductor"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
-        android:background="@drawable/fondo4"
-        android:layout_width="@dimen/ImagenReproductorAncho"
+        android:background="@drawable/disco"
         android:layout_height="@dimen/ImagenReproductorlargo"
         android:layout_marginTop="@dimen/ImagenReproductorMargenArriba"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_width="300dp" />
 
     <SeekBar
         android:id="@+id/seekBar1"
-        android:layout_width="@dimen/SeekBarLargo"
         android:layout_below="@+id/image_reproductor"
+        android:background="#d7d7d7"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/SeekBarMargenArriba"
-        android:layout_height="20dp"
-        android:max="10" />
+        android:layout_height="@dimen/SeekBarAncho"
+        android:layout_width="250dp" />
 
-    <ImageButton android:id="@+id/stop"
-        android:layout_height="@dimen/BotonDetenerAncho"
-        android:src="@mipmap/ic_reproductor_stop"
-        android:layout_width="@dimen/BotonDetenerLargo"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="19dp"
-        tools:ignore="ContentDescription"
+    <ImageButton android:id="@+id/play"
+        android:src="@drawable/ic_reproductor_play"
+        android:background="@drawable/boton_redondo"
+        android:layout_width="@dimen/BotonReproducirLargo"
+        android:layout_height="@dimen/BotonReproducirAncho"
         android:layout_below="@+id/seekBar1"
-        android:layout_alignRight="@+id/image_reproductor"
-        android:layout_alignEnd="@+id/image_reproductor" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/BotonReproducirMargenArriba"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:text="@string/solicitud"
@@ -59,13 +46,31 @@
         android:textSize="@dimen/LinkReproductorTamañoLetra"
         android:layout_below="@+id/play"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp" />
+        android:layout_marginTop="14dp" />
 
-    <ImageButton android:id="@+id/play"
-        android:src="@mipmap/ic_reproductor_play"
-        android:layout_width="@dimen/BotonReproducirLargo"
-        android:layout_height="@dimen/BotonReproducirAncho"
+    <ImageButton android:id="@+id/stop"
+        android:layout_height="@dimen/BotonDetenerAncho"
+        android:src="@drawable/ic_reproductor_stop"
+        android:background="@drawable/boton_redondo"
+        android:layout_width="@dimen/BotonDetenerLargo"
+        android:layout_marginTop="12dp"
         tools:ignore="ContentDescription"
-        android:layout_alignTop="@+id/pause"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignTop="@+id/play"
+        android:layout_toRightOf="@+id/play"
+        android:layout_toEndOf="@+id/play"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp" />
+
+    <ImageButton android:id="@+id/pause"
+        android:layout_height="@dimen/BotonPausaLargo"
+        android:layout_width="@dimen/BotonPausaAncho"
+        android:src="@drawable/ic_reproductor_pause"
+        android:background="@drawable/boton_redondo"
+        android:layout_marginRight="11dp"
+        android:layout_marginEnd="11dp"
+        android:contentDescription=""
+        tools:ignore="ContentDescription"
+        android:layout_alignTop="@+id/stop"
+        android:layout_toLeftOf="@+id/play"
+        android:layout_toStartOf="@+id/play" />
 </RelativeLayout>
