arreglar error:No reproduce el stream y agregar el estilo del titulo

--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
@@ -24,8 +24,8 @@
         android:background="#d7d7d7"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/SeekBarMargenArriba"
-        android:layout_height="@dimen/SeekBarAncho"
-        android:layout_width="250dp" />
+        android:layout_width="250dp"
+        android:layout_height="25dp" />
 
     <ImageButton android:id="@+id/play"
         android:src="@drawable/ic_reproductor_play"
