--- a/PlantillaAPK/app/src/main/res/values/styles.xml
+++ b/PlantillaAPK/app/src/main/res/values/styles.xml
@@ -23,6 +23,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="viewPagerTitleStrip">
+        <item name="android:textSize">20sp</item>
+    </style>
 
 
 </resources>
