--- a/PlantillaAPK/app/src/main/res/layout/activity_main.xml
+++ b/PlantillaAPK/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         <android.support.v4.view.PagerTitleStrip
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/viewPagerTitleStrip"
             android:layout_gravity="top"
             android:background="#3F51B5"
             android:textColor="#fff"
