--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
@@ -1,76 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondoreproductor">
 
-    <ImageView
-        android:id="@+id/image_reproductor"
-        android:contentDescription="@string/DescripcionImgReproductor"
-        android:adjustViewBounds="false"
-        android:cropToPadding="false"
-        android:background="@drawable/disco"
-        android:layout_height="@dimen/ImagenReproductorlargo"
-        android:layout_marginTop="@dimen/ImagenReproductorMargenArriba"
+    <LinearLayout
+        android:layout_width="20dp"
+        android:layout_height="match_parent">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="20dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="300dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
+        android:background="@drawable/disco2"
+        android:layout_height="200dp"
+        android:layout_width="315dp">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_height="150dp">
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_height="100dp"
+        android:layout_marginTop="430dp"
+        android:layout_width="575dp">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <ImageButton android:id="@+id/stop"
+            android:src="@drawable/ic_reproductor_stop"
+            tools:ignore="ContentDescription"
+            android:background="@drawable/boton_redondo"
+            android:layout_alignBottom="@+id/play"
+            android:layout_toRightOf="@+id/play"
+            android:layout_toEndOf="@+id/play"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <ImageButton android:id="@+id/pause"
+            android:src="@drawable/ic_reproductor_pause"
+            android:contentDescription=""
+            tools:ignore="ContentDescription"
+            android:background="@drawable/boton_redondo"
+            android:layout_marginRight="22dp"
+            android:layout_marginEnd="22dp"
+            android:layout_alignTop="@+id/stop"
+            android:layout_toLeftOf="@+id/play"
+            android:layout_toStartOf="@+id/play"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <ImageButton android:id="@+id/play"
+            android:src="@drawable/ic_reproductor_play"
+            tools:ignore="ContentDescription"
+            android:background="@drawable/boton_redondo"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="90dp"
+            android:layout_height="90dp" />
+
+        <TextView
+            android:text="@string/solicitud"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColorLink="#ffffff"
+            android:id="@+id/textoSolicitud"
+            android:textSize="@dimen/LinkReproductorTamañoLetra"
+            android:layout_weight="1"
+            android:layout_marginTop="24dp"
+            android:layout_below="@+id/stop"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
 
     <SeekBar
         android:id="@+id/seekBar1"
-        android:layout_below="@+id/image_reproductor"
+        android:layout_height="25dp"
+        android:max="10"
         android:background="#d7d7d7"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/SeekBarMargenArriba"
-        android:layout_width="250dp"
-        android:layout_height="25dp" />
+        android:layout_width="300dp" />
 
-    <ImageButton android:id="@+id/play"
-        android:src="@drawable/ic_reproductor_play"
-        android:background="@drawable/boton_redondo"
-        android:layout_width="@dimen/BotonReproducirLargo"
-        android:layout_height="@dimen/BotonReproducirAncho"
-        android:layout_below="@+id/seekBar1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/BotonReproducirMargenArriba"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:text="@string/solicitud"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColorLink="@color/colorPrimary"
-        android:id="@+id/textoSolicitud"
-        android:textSize="@dimen/LinkReproductorTamañoLetra"
-        android:layout_below="@+id/play"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp" />
-
-    <ImageButton android:id="@+id/stop"
-        android:layout_height="@dimen/BotonDetenerAncho"
-        android:src="@drawable/ic_reproductor_stop"
-        android:background="@drawable/boton_redondo"
-        android:layout_width="@dimen/BotonDetenerLargo"
-        android:layout_marginTop="12dp"
-        tools:ignore="ContentDescription"
-        android:layout_alignTop="@+id/play"
-        android:layout_toRightOf="@+id/play"
-        android:layout_toEndOf="@+id/play"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp" />
-
-    <ImageButton android:id="@+id/pause"
-        android:layout_height="@dimen/BotonPausaLargo"
-        android:layout_width="@dimen/BotonPausaAncho"
-        android:src="@drawable/ic_reproductor_pause"
-        android:background="@drawable/boton_redondo"
-        android:layout_marginRight="11dp"
-        android:layout_marginEnd="11dp"
-        android:contentDescription=""
-        tools:ignore="ContentDescription"
-        android:layout_alignTop="@+id/stop"
-        android:layout_toLeftOf="@+id/play"
-        android:layout_toStartOf="@+id/play" />
 </RelativeLayout>
