--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
@@ -59,12 +59,38 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/linea"
+        android:layout_width="270dp"
+        android:background="#d7d7d7"
+        android:orientation="horizontal"
+        android:layout_height="5dp"
+        android:layout_marginTop="250dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="11dp">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linea2"
+        android:layout_width="270dp"
+        android:background="#d7d7d7"
+        android:orientation="horizontal"
+        android:layout_height="5dp"
+        android:layout_marginTop="380dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="11dp" >
+
+    </LinearLayout>
+
+
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="200dp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/linea"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="7dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
@@ -111,19 +137,14 @@
             android:id="@+id/textoSolicitud"
             android:textSize="@dimen/LinkReproductorTamañoLetra"
             android:layout_weight="1"
-            android:layout_marginTop="24dp"
-            android:layout_below="@+id/stop"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="18dp" />
 
     </RelativeLayout>
 
-    <SeekBar
-        android:id="@+id/seekBar1"
-        android:layout_height="25dp"
-        android:max="10"
-        android:background="#d7d7d7"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="300dp" />
+
+
+
 
 </RelativeLayout>
