--- a/PlantillaAPK/app/src/main/res/layout-xlarge/fragment_pantalla_informacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-xlarge/fragment_pantalla_informacion.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,12 +25,13 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/logoface"
+            app:srcCompat="@drawable/logo"
             android:id="@+id/imagenInformacionLogo"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            tools:ignore="ContentDescription" />
     </RelativeLayout>
 
     <RelativeLayout
