implementando los gets de la clase radio, agregando el menu share

--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_reproductor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -56,6 +57,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="430dp"
         android:layout_width="575dp">
+
 
     </RelativeLayout>
 
@@ -141,10 +143,17 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="18dp" />
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_reproductor_share"
+            android:id="@+id/share"
+            android:layout_alignBottom="@+id/textoSolicitud"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:onClick="true"/>
+
     </RelativeLayout>
-
-
-
 
 
 </RelativeLayout>
