--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_informacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_informacion.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/fondoreproductor">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,7 +12,6 @@
         android:id="@+id/informacionVistaScroll">
 
         <TextView
-            android:text="@string/descripcion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textoDescripcion"
@@ -42,7 +42,6 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="28dp"
             android:id="@+id/textoInformacionLink"
-            android:text="@string/visitanos"
             android:textSize="18sp" />
     </RelativeLayout>
 </LinearLayout>
