--- a/PlantillaAPK/app/src/main/res/layout-normal/activity_pantalla_presentacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/activity_pantalla_presentacion.xml
@@ -25,7 +25,7 @@
         android:layout_height="92dp">
 
         <TextView
-            android:text="Al Radio"
+            android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
