--- a/PlantillaAPK/app/src/main/res/layout-xlarge/activity_pantalla_presentacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-xlarge/activity_pantalla_presentacion.xml
@@ -26,7 +26,7 @@
         android:layout_weight="0.31">
 
         <TextView
-            android:text="Al Radio"
+            android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
