--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_informacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_informacion.xml
@@ -12,19 +12,20 @@
         android:id="@+id/informacionVistaScroll">
 
         <TextView
+            android:textColor="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textoDescripcion"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
     </ScrollView>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="128dp">
+        android:layout_height="180dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:srcCompat="@drawable/logo"
             android:layout_centerVertical="true"
             android:id="@+id/imagenInformacionLogo"
@@ -36,6 +37,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:textColorLink="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
