--- a/PlantillaAPK/app/src/main/res/layout-normal/activity_pantalla_presentacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/activity_pantalla_presentacion.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="242dp"
-        android:layout_weight="0.01">
+        android:layout_weight="0.01"
+        tools:ignore="InefficientWeight">
 
         <ImageView
             android:layout_width="match_parent"
@@ -17,7 +18,8 @@
             app:srcCompat="@drawable/logo"
             android:id="@+id/imagenPresentacionLogo"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:contentDescription="@string/DescripcionLogo" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -26,12 +28,13 @@
 
         <TextView
             android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:id="@+id/textoNombreRadio"
             android:textStyle="normal|bold"
             android:textAlignment="center"
+            android:gravity="center"
             android:textSize="30sp"
             android:textColor="@android:color/black" />
     </RelativeLayout>
@@ -41,7 +44,7 @@
         android:layout_height="120dp">
 
         <TextView
-            android:text="1.0"
+            android:text="@string/NumVersion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textoNumeroVersion"
@@ -50,7 +53,7 @@
             android:layout_marginBottom="14dp" />
 
         <TextView
-            android:text="version"
+            android:text="@string/Version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textoVersion"
