--- a/PlantillaAPK/app/src/main/res/layout-large/fragment_pantalla_informacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-large/fragment_pantalla_informacion.xml
@@ -42,10 +42,9 @@
             android:textColorLink="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="28dp"
             android:id="@+id/textoInformacionLink"
-            android:textSize="27sp" />
+            android:textSize="27sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </LinearLayout>
