--- a/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_informacion.xml
+++ b/PlantillaAPK/app/src/main/res/layout-normal/fragment_pantalla_informacion.xml
@@ -8,8 +8,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="236dp"
-        android:id="@+id/informacionVistaScroll">
+        android:id="@+id/informacionVistaScroll"
+        android:layout_height="215dp">
 
         <TextView
             android:textColor="#ffffff"
@@ -40,10 +40,9 @@
             android:textColorLink="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="28dp"
             android:id="@+id/textoInformacionLink"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </LinearLayout>
