--- a/PlantillaAPK/app/src/main/res/layout/activity_main.xml
+++ b/PlantillaAPK/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             style="@style/viewPagerTitleStrip"
             android:layout_gravity="top"
-            android:background="#3F51B5"
+            android:background="@color/colorPrimary"
             android:textColor="#fff"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"/>
